# reqtap

./: .gitignore  LICENSE  README.md  pyproject.toml
reqtap/: __init__.py
reqtap/core/: __init__.py  models.py  safety.py  store.py
reqtap/flask/: __init__.py  extension.py  intercept.py
tests/: conftest.py  test_capture.py  test_safety.py  test_store.py
