[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqtap"
version = "0.0.1"
description = "A wiretap for your web app's requests — passively capture and inspect every request from inside your Flask app."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Joshua Ng" }]
keywords = ["flask", "debugging", "requests", "wsgi", "developer-tools"]
dependencies = []

[project.optional-dependencies]
# Flask is an optional extra: the core package has zero hard dependencies, so
# `import reqtap` works without it. The Flask adapter (the only one in v0.1)
# needs it, hence `pip install reqtap[flask]`.
flask = ["flask>=2.0"]
dev = ["pytest>=8", "mypy>=1.8", "ruff>=0.4", "flask>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["reqtap"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
# The dashboard UI ships as data files, not importable modules.
exclude = ["reqtap/dashboard/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Show log output live during test runs, and give later log-assertion tests a
# consistent format to read. The `caplog` fixture captures records regardless;
# these settings just make logs visible while developing tests.
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s %(levelname)-8s %(name)s: %(message)s"
